--- a/assets/desenho.html
+++ b/assets/desenho.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Arquitetura - ChatMesh</title>
+  <title>Arquitetura ChatMesh - Projeto SPD</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -12,21 +13,32 @@
     .node {
       border-left: 5px solid #0d6efd;
       border-radius: 0.5rem;
-      background: white;
-      padding: 1rem;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      background: #fff;
+      padding: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       margin-bottom: 2rem;
+      transition: transform 0.2s;
+    }
+    .node:hover {
+      transform: scale(1.02);
     }
     .connection-arrow {
       font-size: 1.5rem;
       color: #0d6efd;
     }
     .tech {
-      font-size: 0.9rem;
-      background: #e9ecef;
+      font-size: 0.85rem;
+      background: #e2e6ea;
       border-radius: 0.25rem;
       padding: 0.25rem 0.5rem;
-      margin: 0.25rem;
+      margin: 0.2rem;
+    }
+    .section-title {
+      margin-top: 3rem;
+      margin-bottom: 1rem;
+    }
+    .infra {
+      font-size: 0.95rem;
     }
   </style>
 </head>
@@ -34,26 +46,15 @@
 
   <h2 class="mb-4 text-center"><i class="fas fa-network-wired me-2"></i>Arquitetura do Projeto: <strong>ChatMesh</strong></h2>
 
-  <div class="row justify-content-center text-center mb-5">
+  <p class="text-center text-muted mb-5">Sistema distribuído de chat com comunicação ponto-a-ponto (P2P), replicação e sincronização de mensagens entre múltiplos peers.</p>
+
+  <div class="row justify-content-center text-center">
     <div class="col-md-3 node">
-      <h5><i class="fas fa-laptop-code text-primary"></i> Peer 1</h5>
-      <p>Conecta, envia e recebe mensagens</p>
+      <h5><i class="fas fa-user-terminal text-primary"></i> Peer 1</h5>
+      <p>Interface de envio de mensagens<br>Conecta a múltiplos peers e armazena logs</p>
       <div class="d-flex justify-content-center flex-wrap">
         <span class="tech"><i class="fab fa-python"></i> Python</span>
         <span class="tech"><i class="fas fa-terminal"></i> Socket TCP</span>
-        <span class="tech"><i class="fas fa-box"></i> Docker</span>
-      </div>
-    </div>
-
-    <div class="col-md-1 d-flex align-items-center justify-content-center">
-      <i class="fas fa-arrow-right connection-arrow"></i>
-    </div>
-
-    <div class="col-md-3 node">
-      <h5><i class="fas fa-laptop-code text-primary"></i> Peer 2</h5>
-      <p>Sincroniza mensagens e mantém histórico local</p>
-      <div class="d-flex justify-content-center flex-wrap">
-        <span class="tech"><i class="fas fa-code-branch"></i> Multiprocessing</span>
         <span class="tech"><i class="fas fa-file-alt"></i> Log Local</span>
       </div>
     </div>
@@ -63,23 +64,48 @@
     </div>
 
     <div class="col-md-3 node">
-      <h5><i class="fas fa-laptop-code text-primary"></i> Peer 3</h5>
-      <p>Permite reconexões e sincronizações P2P</p>
+      <h5><i class="fas fa-sync-alt text-success"></i> Peer 2</h5>
+      <p>Recebe mensagens e sincroniza o histórico com outros peers</p>
       <div class="d-flex justify-content-center flex-wrap">
-        <span class="tech"><i class="fas fa-retweet"></i> Reconexão</span>
+        <span class="tech"><i class="fas fa-code-branch"></i> Multiprocessing</span>
+        <span class="tech"><i class="fas fa-clock"></i> Sincronização</span>
+        <span class="tech"><i class="fas fa-database"></i> Backup Local</span>
+      </div>
+    </div>
+
+    <div class="col-md-1 d-flex align-items-center justify-content-center">
+      <i class="fas fa-arrow-right connection-arrow"></i>
+    </div>
+
+    <div class="col-md-3 node">
+      <h5><i class="fas fa-redo text-warning"></i> Peer 3</h5>
+      <p>Capaz de reconectar após falha e recuperar histórico</p>
+      <div class="d-flex justify-content-center flex-wrap">
+        <span class="tech"><i class="fas fa-heartbeat"></i> Tolerância a Falhas</span>
+        <span class="tech"><i class="fas fa-link"></i> Reconexão</span>
         <span class="tech"><i class="fas fa-chart-line"></i> Métricas</span>
       </div>
     </div>
   </div>
 
-  <div class="text-center mt-5">
-    <h5><i class="fas fa-sitemap"></i> Arquitetura: <strong>Peer-to-Peer com Sincronização</strong></h5>
-    <p class="text-muted">Todos os peers se comunicam entre si diretamente, com persistência de histórico e sincronização via protocolo customizado.</p>
+  <div class="text-center section-title">
+    <h4><i class="fas fa-layer-group"></i> Arquitetura Técnica</h4>
+    <p class="text-muted mb-2">Baseada em rede mesh com comunicação descentralizada</p>
     <div class="d-flex justify-content-center flex-wrap">
-      <span class="tech"><i class="fas fa-balance-scale"></i> Sem servidor central</span>
-      <span class="tech"><i class="fas fa-project-diagram"></i> Topologia Mesh</span>
-      <span class="tech"><i class="fas fa-sync"></i> Atualização assíncrona</span>
+      <span class="tech"><i class="fas fa-project-diagram"></i> P2P Full Mesh</span>
+      <span class="tech"><i class="fas fa-cogs"></i> Threads/Multiprocessing</span>
+      <span class="tech"><i class="fas fa-server"></i> Docker Containers</span>
+      <span class="tech"><i class="fas fa-network-wired"></i> Rede Virtual Docker</span>
     </div>
+  </div>
+
+  <div class="text-center section-title">
+    <h4><i class="fas fa-tools"></i> Tecnologias Utilizadas</h4>
+    <p class="infra">Python, Sockets, Multiprocessing, FastAPI (interface), Docker, Docker Compose</p>
+  </div>
+
+  <div class="text-center section-title">
+    <h5 class="text-muted"><i class="fas fa-bolt"></i> Suporte a escalabilidade horizontal e sincronização ponto-a-ponto entre nós</h5>
   </div>
 
 </body>
